# digital.twin.wasm

./: .gitignore  digital.twin.wasm.code-workspace  readme.md  run.sh  run_sevice.sh  run_site.sh
md/: vscode.md
rbfx.wasm.apps.server/: config.json  package-lock.json  package.json  server.js
rbfx.wasm.apps.server/WizardProject/test/: imgui.ini  project.db  project.json  scene.json
rbfx.wasm.apps.server/code/: 12.js  13.js  14.js  Polygon.js  bottle.js  cal.js  geo.js  logo.js  new event.js  openTitles.js  rbfx.js  shape.js  test.js  testcad.js  tt.js  tttt.js  yinc.js
rbfx.wasm.apps.server/node-mid/: dbCtrl.js  project.js  service.js
rbfx.wasm.apps.server/sql/: COAL_SEAM.sql
rbfx.wasm.apps.server/web/: CasCadEditor.data.js  code.html  common.data.js  index.html
rbfx.wasm.apps.server/web/common/: wasm.html
rbfx.wasm.apps.server/web/runtime/basic/: cascad_wrap.js  digital_twin_wrap.js  global.js  init.js
rbfx.wasm.apps.server/web/runtime/css/: fm_markdown.css
rbfx.wasm.apps.server/web/runtime/markdown/: help.md
rbfx.wasm.apps.site/: index.html  package-lock.json  package.json  vite.config.js
rbfx.wasm.apps.site/src/: App.vue  main.js
rbfx.wasm.apps.site/src/assets/css/: main.css
rbfx.wasm.apps.site/src/assets/js/three/: three.module.js
rbfx.wasm.apps.site/src/assets/js/three/utils/: TextureUtils.js
rbfx.wasm.apps.site/src/components/: AppTemplate.vue  HelloWorld.vue
rbfx.wasm.apps.site/src/modules/: cascad_editor.vue  cascade_wasm_editor.vue  fileView.vue  help.vue  model_editor.vue  projectView.vue  termView.vue  wasm_editor.vue
rbfx.wasm.apps.site/src/plugins/: base.js  vuetify.js  webfontloader.js
rbfx.wasm.apps.site/src/router/: router.js
rbfx.wasm.apps.site/src/stores/: globle.js
rbfx.wasm.apps.site/src/views/: FmContain.vue  HelloWorld.vue  cascad_editor.vue  login.vue  wasm_editor.vue
rbfx.wasm.sevice/: CMakeLists.txt
rbfx.wasm.sevice/src/: main.cpp
rbfx.wasm.sevice/src/expand/: OpenMesh.h  OpenMesh_do.h  cgal_do.h  cgal_test.h  postgis_do.h
rbfx.wasm.sevice/src/op/: implicit_functions.cpp  implicit_functions.h
